[gd_scene load_steps=35 format=2]

[ext_resource path="res://assets/tilesets/walls/walls.png" type="Texture" id=1]
[ext_resource path="res://scenes/objects/Bed.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tilesets/floors/wooden.png" type="Texture" id=3]
[ext_resource path="res://scenes/UI/Wall.tres" type="TileSet" id=4]
[ext_resource path="res://scripts/PlayerMenu.gd" type="Script" id=5]
[ext_resource path="res://assets/characters/player.png" type="Texture" id=6]
[ext_resource path="res://assets/tilesets/walls/wooden_door_b.png" type="Texture" id=7]
[ext_resource path="res://sounds/sfx/walk_floor.wav" type="AudioStream" id=8]
[ext_resource path="res://font/8-BIT WONDER.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://assets/ExitButton.png" type="Texture" id=10]
[ext_resource path="res://assets/PlayButton.png" type="Texture" id=11]
[ext_resource path="res://sounds/sfx/interruptor.wav" type="AudioStream" id=12]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=13]
[ext_resource path="res://scenes/Transition.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=21]
size = 25
font_data = ExtResource( 9 )

[sub_resource type="TileSet" id=1]
0/name = "wooden.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=2]
0/name = "walls.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 96 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 1, 4 ), 438, Vector2( 1, 5 ), 54, Vector2( 2, 4 ), 511, Vector2( 2, 5 ), 63, Vector2( 3, 4 ), 219, Vector2( 3, 5 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 9 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5.5, 3 )

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="DynamicFont" id=22]
size = 4
font_data = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 8, 9.5 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 11, 11.5 )

[sub_resource type="CircleShape2D" id=23]

[node name="Menu" type="Node2D"]
script = ExtResource( 13 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 384.0
margin_bottom = 192.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 19.0
margin_top = 44.0
margin_right = 184.0
margin_bottom = 114.0
custom_fonts/normal_font = SubResource( 21 )
bbcode_enabled = true
bbcode_text = "[wave amp=35 freq=3]Mystic 
Woods[/wave]"
text = "Mystic 
Woods"
fit_content_height = true

[node name="ExitButton" type="Sprite" parent="CanvasLayer"]
position = Vector2( 86, 150 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="CanvasLayer/ExitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -285.0
margin_top = -139.5
margin_right = -285.0
margin_bottom = -139.5
flat = true

[node name="PlayButton" type="Sprite" parent="CanvasLayer"]
position = Vector2( 86, 132 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="CanvasLayer/PlayButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -285.0
margin_top = -139.5
margin_right = -285.0
margin_bottom = -139.5
flat = true

[node name="YSort" type="YSort" parent="."]
position = Vector2( 11, 0 )

[node name="Home" type="Node2D" parent="YSort"]

[node name="Floor" type="TileMap" parent="YSort/Home"]
position = Vector2( 109, -17 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0 )

[node name="Wall" type="TileMap" parent="YSort/Home"]
position = Vector2( 109, -17 )
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 262148, 0, 327681, 262149, 0, 327682, 262150, 0, 327682, 262151, 0, 327682, 262152, 0, 327682, 262153, 0, 327682, 262154, 0, 327682, 262155, 0, 327682, 262156, 0, 327682, 262157, 0, 327682, 262158, 0, 327683, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 655364, 0, 327681, 655365, 0, 327682, 655366, 0, 327682, 655367, 0, 327682, 655368, 0, 327682, 655369, 0, 327682, 655370, 0, 327682, 655371, 0, 327682, 655372, 0, 327682, 655373, 0, 327682, 655374, 0, 327683 )

[node name="Wall2" type="TileMap" parent="YSort/Home/Wall"]
z_index = 1
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 262148, 0, 65537, 262149, 0, 65538, 262150, 0, 65538, 262151, 0, 65538, 262152, 0, 65538, 262153, 0, 65538, 262154, 0, 65538, 262155, 0, 65538, 262156, 0, 65538, 262157, 0, 65538, 262158, 0, 65539, 327684, 0, 65537, 327685, 0, 65538, 327686, 0, 65538, 327687, 0, 65538, 327688, 0, 65538, 327689, 0, 65538, 327690, 0, 65538, 327691, 0, 65538, 327692, 0, 65538, 327693, 0, 65538, 327694, 0, 65539, 393220, 0, 65537, 393221, 0, 65538, 393222, 0, 65538, 393223, 0, 65538, 393224, 0, 65538, 393225, 0, 65538, 393226, 0, 65538, 393227, 0, 65538, 393228, 0, 65538, 393229, 0, 65538, 393230, 0, 65539, 458756, 0, 65537, 458757, 0, 65538, 458758, 0, 65538, 458759, 0, 65538, 458760, 0, 65538, 458761, 0, 65538, 458762, 0, 65538, 458763, 0, 65538, 458764, 0, 65538, 458765, 0, 65538, 458766, 0, 65539, 524292, 0, 65537, 524293, 0, 65538, 524294, 0, 65538, 524295, 0, 65538, 524296, 0, 65538, 524297, 0, 65538, 524298, 0, 65538, 524299, 0, 65538, 524300, 0, 65538, 524301, 0, 65538, 524302, 0, 65539, 589828, 0, 131073, 589829, 0, 131074, 589830, 0, 131074, 589831, 0, 131074, 589832, 0, 131074, 589833, 0, 131074, 589834, 0, 131074, 589835, 0, 131074, 589836, 0, 131074, 589837, 0, 131074, 589838, 0, 131075 )

[node name="Player" type="KinematicBody2D" parent="YSort" groups=["player"]]
position = Vector2( 301, 90 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
speed = 80

[node name="Sprite" type="Sprite" parent="YSort/Player"]
position = Vector2( 0, -6 )
texture = ExtResource( 6 )
hframes = 6
vframes = 5

[node name="Collision" type="CollisionShape2D" parent="YSort/Player"]
visible = false
position = Vector2( 0.5, 10 )
shape = SubResource( 8 )

[node name="walk" type="AudioStreamPlayer" parent="YSort/Player"]
stream = ExtResource( 8 )
volume_db = 5.0

[node name="Animation" type="AnimationPlayer" parent="YSort/Player"]
root_node = NodePath("../Sprite")
anims/Idle = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/Run = SubResource( 7 )

[node name="Label" type="Label" parent="YSort/Player"]
visible = false
margin_left = -8.0
margin_top = -13.0
margin_right = 9.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 22 )
align = 1

[node name="Options" type="YSort" parent="YSort"]
position = Vector2( -7, 0 )

[node name="Door" type="Area2D" parent="YSort/Options"]
position = Vector2( 325, 152 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="YSort/Options/Door"]
texture = ExtResource( 7 )
hframes = 2

[node name="Collision" type="CollisionShape2D" parent="YSort/Options/Door"]
visible = false
position = Vector2( 0, -3.5 )
shape = SubResource( 19 )

[node name="Bed" type="Area2D" parent="YSort/Options"]
position = Vector2( 197, 84 )
__meta__ = {
"_edit_group_": true
}

[node name="Bed" parent="YSort/Options/Bed" instance=ExtResource( 2 )]

[node name="Collision" type="CollisionShape2D" parent="YSort/Options/Bed"]
visible = false
position = Vector2( 1, 10.5 )
shape = SubResource( 20 )

[node name="Switch" type="Area2D" parent="YSort/Options"]
position = Vector2( 326, 52 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="YSort/Options/Switch"]
margin_right = 4.0
margin_bottom = 6.0
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="ColorRect2" type="ColorRect" parent="YSort/Options/Switch"]
margin_left = 1.0
margin_top = 1.0
margin_right = 3.0
margin_bottom = 5.0
color = Color( 0.32549, 0.32549, 0.32549, 1 )

[node name="ColorRect3" type="ColorRect" parent="YSort/Options/Switch"]
margin_left = 1.0
margin_top = 1.0
margin_right = 3.0
margin_bottom = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Options/Switch"]
visible = false
position = Vector2( 2, 3 )
shape = SubResource( 23 )

[node name="interruptor" type="AudioStreamPlayer" parent="YSort/Options/Switch"]
stream = ExtResource( 12 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.0666667, 0.145098, 0.184314, 1 )

[node name="Transition" parent="." instance=ExtResource( 14 )]

[connection signal="pressed" from="CanvasLayer/ExitButton/Button" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="CanvasLayer/PlayButton/Button" to="." method="_on_Play_pressed"]
[connection signal="body_entered" from="YSort/Options/Door" to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="YSort/Options/Door" to="." method="_on_Door_body_exited"]
[connection signal="body_entered" from="YSort/Options/Bed" to="." method="_on_Bed_body_entered"]
[connection signal="body_exited" from="YSort/Options/Bed" to="." method="_on_Bed_body_exited"]
[connection signal="body_entered" from="YSort/Options/Switch" to="." method="_on_Switch_body_entered"]
[connection signal="body_exited" from="YSort/Options/Switch" to="." method="_on_Switch_body_exited"]
